# better-than-basic

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  better-than-basic.service  config-mine.toml  config.toml  test  users.toml
.github/workflows/: main.yml
src/: config.rs  errors.rs  i18n.rs  listener.rs  main.rs  page_data.rs  sessions.rs  users.rs
static/: styles.css
templates/: login.hbs  success.hbs
testing/integration/: Dockerfile  Gemfile  Makefile  docker-compose.yml
testing/integration/nginx/: default-nginx.conf  local-host-nginx.conf  mac-host-nginx.conf
testing/integration/spec/: logging_in_spec.rb  login_page_spec.rb  restricted_area_spec.rb  spec_helper.rb
testing/vagrant/: .gitignore  Brewfile  Gemfile  Vagrantfile  default-nginx.conf  playbook.yml
testing/vagrant/group_vars/: all
testing/vagrant/private/: index.html
